# RustPractice

./: LICENSE
rust_commonly_used/: Cargo.toml
rust_commonly_used/src/: main.rs
rust_f_os/: Cargo.toml  README.md
rust_f_os/.cargo/: config
rust_f_os/src/: main.rs  vga_buffer.rs
rust_gui/iced_gui/: Cargo.toml
rust_gui/iced_gui/src/: main.rs
rust_socket/rust_socket_client/: Cargo.toml
rust_socket/rust_socket_client/src/: main.rs
rust_socket/rust_socket_server/: Cargo.toml  README.md
rust_socket/rust_socket_server/src/: main.rs
rust_struct/: Cargo.toml
rust_struct/src/: main.rs
