[package]
name = "rust_f_os"
version = "0.1.0"
authors = ["feng <1652314522@qq.com>"]
edition = "2018"

[profile.dev]
panic="abort"

[profile.release]
panic="abort"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.6.0"
volatile = "0.2.3"
spin = "0.4.9"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]




[target.'cfg(target_os = "none")']
runner = "bootimage runner"